--- a/railway.toml
+++ b/railway.toml
@@ -7,6 +7,8 @@ providers = ["python"]
 [deploy]
 numReplicas = 1
 
-startCommand = "gunicorn tatygazelle_site.wsgi:application --bind 0.0.0.0:$PORT"
-
-releaseCommand = "python manage.py migrate && python manage.py create_admin && python manage.py collectstatic --noinput"
+startCommand = """
+python manage.py migrate --noinput &&
+python manage.py collectstatic --noinput &&
+gunicorn tatygazelle_site.wsgi:application --bind 0.0.0.0:$PORT
+"""
