--- a/railway.toml
+++ b/railway.toml
@@ -7,11 +7,11 @@ providers = ["python"]
 [deploy]
 numReplicas = 1
 
-# Runs BEFORE the app starts – only ONCE per deploy
+# Runs BEFORE the app starts – ONCE per deploy
 releaseCommand = """
 python manage.py migrate --noinput &&
 python manage.py collectstatic --noinput
 """
 
-# Starts the app – MUST be only the server
+# Starts the web server (Gunicorn only)
 startCommand = "gunicorn tatygazelle_site.wsgi:application --bind 0.0.0.0:$PORT"
