--- a/railway.toml
+++ b/railway.toml
@@ -14,4 +14,5 @@ python manage.py collectstatic --noinput
 """
 
 # Starts the web server (Gunicorn only)
-startCommand = "gunicorn tatygazelle_site.wsgi:application --bind 0.0.0.0:$PORT"
+startCommand = "python manage.py collectstatic --noinput && gunicorn tatygazelle_site.wsgi:application --bind 0.0.0.0:$PORT"
+
