--- a/railway.toml
+++ b/railway.toml
@@ -10,9 +10,9 @@ numReplicas = 1
 # Runs BEFORE the app starts – ONCE per deploy
 releaseCommand = """
 python manage.py migrate --noinput &&
+python manage.py create_admin &&
 python manage.py collectstatic --noinput
 """
 
 # Starts the web server (Gunicorn only)
 startCommand = "python manage.py collectstatic --noinput && gunicorn tatygazelle_site.wsgi:application --bind 0.0.0.0:$PORT"
-
